--- a/resume.html
+++ b/resume.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/styles/resume.css">
         <meta charset="utf-8">
         <meta name="viewport"
             content="width=device-width, initial-scale=1.0">
         <title>Student Resume</title>
     </head>
     <body>
+        <nav class="nav-bar">
+            <a href="index.html" class="main">Portfolio</a>
+            <div class="nav-links" id="navLinks">
+                <a href="index.html">Home</a>
+                <a href="about.html">About Me</a>
+                <a href="citations.html">Citations</a>
+                <a href="index.html#collaborations">Collaborations</a>
+            </div>
+            <button class="mobile-menu-btn" onclick="toggleMenu()">☰</button>
+        </nav>
         <div class = "container">
             <header>
                 <h1>Leo Felker</h1>
@@ -115,7 +125,11 @@
                     </ul>
             </section>
             <footer>
-                <p>&copy; 2025 Leo Felker. All rights reserved.</p>
+                <p>
+                    &copy; 2025 Leo Felker 
+                    |
+                    All Rights Reserved
+                </p>
             </footer>
         </div>
     </body>
